fixed an issue with page content overlapping whenever window was resized vertically

--- a/style.css
+++ b/style.css
@@ -46,8 +46,7 @@ nav li {
 
 /* PROFILE */
 .profile {
-    height: 75vh;
-    /* width: 80%; */
+    height: 620px;
     margin: auto;
     display: flex;
     flex-direction: column;
